@@ -30,6 +30,7 @@
 
 var ecsFormat = require('@elastic/ecs-pino-format')
 var pino = require('pino')
+var semver = require('semver')
 
 const DEFAULT_LOG_LEVEL = 'info'
 
@@ -116,6 +117,11 @@ function createLogger (levelName, customLogger) {
     // Is this a pino logger? If so, it supports the API the agent requires and
     // can be used directly. We must add our custom serializers.
     if (Symbol.for('pino.serializers') in customLogger) {
+      // Pino added `options` second arg to `logger.child` in 6.12.0.
+      if (semver.gte(customLogger.version, '6.12.0')) {
+        return customLogger.child({}, { serializers })
+      }
+
       return customLogger.child({
         serializers: serializers
       })
